samples/_failures_safe/1761631068_c2532b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f92d693b.c: In function ‘main’:
./samples/SAFE/__tmp_f92d693b.c:156:24: error: missing terminating " character
  156 |                 printf("Invalid
      |                        ^~~~~~~~
./samples/SAFE/__tmp_f92d693b.c:156:17: error: expected expression at end of input
  156 |                 printf("Invalid
      |                 ^~~~~~
./samples/SAFE/__tmp_f92d693b.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f92d693b.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f92d693b.c:156:17: error: expected declaration or statement at end of input
